// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AppNotification /> > Default story renders snapshot 1`] = `
<div
  class="_app-notification_d1763b _app-notification--variant-default_d1763b"
  role="status"
>
  <div
    class="_app-notification__content_d1763b"
  >
    <section>
      <div
        class="_text_b3eba3 _text--headline-sm_b3eba3 _app-notification__title_d1763b"
      >
        This is an AppNotification title
      </div>
      <span
        class="_text_b3eba3 _text--body-md_b3eba3 _app-notification__sub-title_d1763b"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="_app-notification__actions_d1763b"
      />
    </section>
  </div>
</div>
`;

exports[`<AppNotification /> > InverseVariant story renders snapshot 1`] = `
<div
  class="_app-notification_d1763b _app-notification--variant-inverse_d1763b"
  role="status"
>
  <div
    class="_app-notification__content_d1763b"
  >
    <section>
      <div
        class="_text_b3eba3 _text--headline-sm_b3eba3 _app-notification__title_d1763b"
      >
        This is an AppNotification title
      </div>
      <span
        class="_text_b3eba3 _text--body-md_b3eba3 _app-notification__sub-title_d1763b"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="_app-notification__actions_d1763b"
      >
         
        <div
          class="_button-group_db62b8 _button-group--horizontal_db62b8 !flex-row"
        >
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Call To Action
            </span>
          </button>
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`<AppNotification /> > InverseWithDismissAndControls story renders snapshot 1`] = `
<div
  class="_app-notification_d1763b _app-notification--variant-inverse_d1763b"
  role="status"
>
  <div
    class="_app-notification__content_d1763b"
  >
    <section>
      <div
        class="_text_b3eba3 _text--headline-sm_b3eba3 _app-notification__title_d1763b"
      >
        This is an AppNotification title
      </div>
      <span
        class="_text_b3eba3 _text--body-md_b3eba3 _app-notification__sub-title_d1763b"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="_app-notification__actions_d1763b"
      >
         
        <div
          class="_button-group_db62b8 _button-group--horizontal_db62b8 !flex-row"
        >
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Call To Action
            </span>
          </button>
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
    <button
      aria-label="close"
      class="_button_0829c1 _button--context-default_0829c1 _button--layout-icon-only_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-neutral_0829c1 _app-notification__close-btn_d1763b"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 12.708L6.75372 17.954C6.66022 18.0476 6.54547 18.0976 6.40947 18.104C6.27364 18.1105 6.15256 18.0605 6.04622 17.954C5.93972 17.8476 5.88647 17.7297 5.88647 17.6002C5.88647 17.4707 5.93972 17.3528 6.04622 17.2465L11.2922 12.0002L6.04622 6.75397C5.95256 6.66047 5.90256 6.54572 5.89622 6.40972C5.88972 6.27388 5.93972 6.1528 6.04622 6.04647C6.15256 5.93997 6.27047 5.88672 6.39997 5.88672C6.52947 5.88672 6.64739 5.93997 6.75372 6.04647L12 11.2925L17.2462 6.04647C17.3397 5.9528 17.4545 5.9028 17.5905 5.89647C17.7263 5.88997 17.8474 5.93997 17.9537 6.04647C18.0602 6.1528 18.1135 6.27072 18.1135 6.40022C18.1135 6.52972 18.0602 6.64764 17.9537 6.75397L12.7077 12.0002L17.9537 17.2465C18.0474 17.34 18.0974 17.4547 18.1037 17.5907C18.1102 17.7266 18.0602 17.8476 17.9537 17.954C17.8474 18.0605 17.7295 18.1137 17.6 18.1137C17.4705 18.1137 17.3526 18.0605 17.2462 17.954L12 12.708Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<AppNotification /> > WithControls story renders snapshot 1`] = `
<div
  class="_app-notification_d1763b _app-notification--variant-default_d1763b"
  role="status"
>
  <div
    class="_app-notification__content_d1763b"
  >
    <section>
      <div
        class="_text_b3eba3 _text--headline-sm_b3eba3 _app-notification__title_d1763b"
      >
        This is an AppNotification title
      </div>
      <span
        class="_text_b3eba3 _text--body-md_b3eba3 _app-notification__sub-title_d1763b"
      >
        Lorem ipsum dolor sit amet consectetur. At et vitae quis amet felis mollis in vitae. Eget in neque et molestie. Luctus sed id commodo volutpat. In a eu in id molestie consectetur pellentesque.
      </span>
      <div
        class="_app-notification__actions_d1763b"
      >
         
        <div
          class="_button-group_db62b8 _button-group--horizontal_db62b8 !flex-row"
        >
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Call To Action
            </span>
          </button>
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`<AppNotification /> > WithDismissAndControls story renders snapshot 1`] = `
<div
  class="_app-notification_d1763b _app-notification--variant-default_d1763b"
  role="status"
>
  <div
    class="_app-notification__content_d1763b"
  >
    <section>
      <div
        class="_text_b3eba3 _text--headline-sm_b3eba3 _app-notification__title_d1763b"
      >
        This is an AppNotification title
      </div>
      <span
        class="_text_b3eba3 _text--body-md_b3eba3 _app-notification__sub-title_d1763b"
      >
        Limited subTitle text
      </span>
      <div
        class="_app-notification__actions_d1763b"
      >
         
        <div
          class="_button-group_db62b8 _button-group--horizontal_db62b8 !flex-row"
        >
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Call To Action
            </span>
          </button>
          <button
            class="_button_0829c1 _button--layout-none_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1"
            type="button"
          >
            <span
              class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
            >
              Other action
            </span>
          </button>
        </div>
      </div>
    </section>
    <button
      aria-label="close"
      class="_button_0829c1 _button--context-default_0829c1 _button--layout-icon-only_0829c1 _button--tertiary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-inverse_0829c1 _app-notification__close-btn_d1763b"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 12.708L6.75372 17.954C6.66022 18.0476 6.54547 18.0976 6.40947 18.104C6.27364 18.1105 6.15256 18.0605 6.04622 17.954C5.93972 17.8476 5.88647 17.7297 5.88647 17.6002C5.88647 17.4707 5.93972 17.3528 6.04622 17.2465L11.2922 12.0002L6.04622 6.75397C5.95256 6.66047 5.90256 6.54572 5.89622 6.40972C5.88972 6.27388 5.93972 6.1528 6.04622 6.04647C6.15256 5.93997 6.27047 5.88672 6.39997 5.88672C6.52947 5.88672 6.64739 5.93997 6.75372 6.04647L12 11.2925L17.2462 6.04647C17.3397 5.9528 17.4545 5.9028 17.5905 5.89647C17.7263 5.88997 17.8474 5.93997 17.9537 6.04647C18.0602 6.1528 18.1135 6.27072 18.1135 6.40022C18.1135 6.52972 18.0602 6.64764 17.9537 6.75397L12.7077 12.0002L17.9537 17.2465C18.0474 17.34 18.0974 17.4547 18.1037 17.5907C18.1102 17.7266 18.0602 17.8476 17.9537 17.954C17.8474 18.0605 17.7295 18.1137 17.6 18.1137C17.4705 18.1137 17.3526 18.0605 17.2462 17.954L12 12.708Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<AppNotification /> > WithLinkInSubtitle story renders snapshot 1`] = `
<div
  class="_app-notification_d1763b _app-notification--variant-default_d1763b"
  role="status"
>
  <div
    class="_app-notification__content_d1763b"
  >
    <section>
      <div
        class="_text_b3eba3 _text--headline-sm_b3eba3 _app-notification__title_d1763b"
      >
        This is an AppNotification title
      </div>
      <span
        class="_text_b3eba3 _text--body-md_b3eba3 _app-notification__sub-title_d1763b"
      >
        <span
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Some text with a
           
          <a
            class="_link_d78ce8 _link--emphasis-default_d78ce8 _link--variant-inverse_d78ce8"
            href="https://example.com/"
          >
            link
          </a>
           
          in.
        </span>
      </span>
      <div
        class="_app-notification__actions_d1763b"
      />
    </section>
  </div>
</div>
`;
